Swagger doc implementation
